# taskwait

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: docs.yml  release.yml
docs/: index.md
search/: search_index.json
src/taskwait/: __about__.py  __init__.py
tests/: __init__.py  test_taskwait.py
